--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
+<!DOCTYPE html>
 <html>
+    <head>
         <!-- stylesheet -->
-        <link rel="stylesheet" href="style.css">
-        
+        <link rel="stylesheet" href="styles.css">
+
         <!-- font awesome -->
         <script src="https://kit.fontawesome.com/54cfba4206.js" crossorigin="anonymous"></script>
 
+        <!-- fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;400;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div id="root"></div>
-        <script src="index.pack.js" type="module"></script>
+    <div id="root"></div>
+    <script src="dist/index.pack.js" type="module"></script>
     </body>
 </html>
